cmake_minimum_required(VERSION 3.20)
project(EDD_SmartClass_201905711)

set(CMAKE_CXX_STANDARD 17)

add_executable(EDD_SmartClass_201905711 main.cpp NodoDobleCircular.cpp NodoDobleCircular.h ListaDobleCircular.h ListaDobleCircular.cpp NodoCola.h NodoCola.cpp Cola.h Cola.cpp NodoDoble.h NodoDoble.cpp ListaDoble.h ListaDoble.cpp NodoMatriz.h NodoMatriz.cpp)
